force-app/main/default/objects/Job_Application__c/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <defaultValue>&quot;Submitted&quot;</defaultValue>
    <label>Recruitment Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Initial Interview</fullName>
            </value>
            <value>
                <fullName>Technical Interview</fullName>
            </value>
            <value>
                <fullName>Technical Exercise</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Recruited!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>