force-app/main/default/objects/Job_Application__c/fields/AvailableToTravel__c.field-meta.xml
<CustomField>
    <fullName>AvailableToTravel__c</fullName>
    <label>AvailableToTravel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>